--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "![Design preview for the Clock app coding challenge](./preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html",
+    "build": "npm run parcel && npm run sass",
+    "sass": "sass src/scss/main.scss:src/css/main.css",
+    "parcel": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel-bundler": "^1.12.5",
+    "sass": "^1.35.2"
+  }
 }
