--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
     "sass": "^1.35.2"
+  },
+  "dependencies": {
+    "gsap": "^3.7.0"
   }
 }
