--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.14.7",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.35.2"
   },
