--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "parcel-bundler": "^1.12.5",
-    "sass": "^1.35.2"
+    "sass": "^1.35.2",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "gsap": "^3.7.0"
+    "gsap": "^3.7.0",
+    "lodash": "^4.17.21"
   }
 }
